# tinker9

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmessage.txt  .gitmodules  .readthedocs.yml  .travis-Makefile  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  _clang-format  acc_2adddef_8h_source.html  acc_2realndef_8h_source.html  acc_2seqdef_8h_source.html  accasync_8h_source.html  add_8h_source.html  adddef_8h_source.html  amoeba_2empole_8h_source.html  amoeba_2epolar_8h_source.html  amoeba_2induce_8h_source.html  amoebamod_8h_source.html  angle_8h_source.html  angtor_8h_source.html  annotated.html  aplus_2empole_8h_source.html  aplus_2epolar_8h_source.html  aplus_2induce_8h_source.html  aplusmod_8h_source.html  argkey_8h_source.html  atom_8h_source.html  bond_8h_source.html  box_8h_source.html  bsplgen_8h_source.html  cflux_8h_source.html  chgpen_8h_source.html  class_a_l_l_i_n_g_e_r-members.html  class_a_l_l_i_n_g_e_r.html  (+523 more)
src/: CMakeLists.txt  acc_angle.cpp  acc_async.cpp  acc_bond.cpp  acc_chkpole.cpp  acc_cudalib.cpp  acc_field_coulomb.cpp  acc_field_ewald.cpp  acc_field_nonewald.cpp  acc_geom.cpp  acc_image.cpp  acc_induce.cpp  acc_mathfunc.cpp  acc_mathfunc_parallel.cpp  acc_md.cpp  acc_md_baro.cpp  acc_md_egv.cpp  acc_md_intg.cpp  acc_md_pq.cpp  acc_md_pt.cpp  acc_md_thermo.cpp  acc_md_thermostat.cpp  acc_mdstate.cpp  acc_mpole_coulomb.cpp  acc_mpole_ewald.cpp  acc_mpole_nonewald.cpp  acc_nblist.cpp  acc_opbend.cpp  acc_pitors.cpp  acc_pme_cf.cpp  acc_pme_conv.cpp  acc_pme_grid_fphi.cpp  acc_polar_coulomb.cpp  acc_polar_energy.cpp  acc_polar_ewald.cpp  acc_polar_nonewald.cpp  acc_rotpole.cpp  acc_strbnd.cpp  acc_torque.cpp  acc_tors.cpp  (+379 more)
src-acc/: CMakeLists.txt  accmanaged_acc.cpp  alterchg_acc.cpp  cudalib_acc.cpp  dcflux_acc.cpp  eangtor_acc.cpp  edisp_acc.cpp  elj_acc.cpp  empole_nonewald_acc.cpp  eopbend_acc.cpp  epitors_acc.cpp  epolar_chgpen_acc.cpp  epolar_ewald_acc.cpp  epolar_nonewald_acc.cpp  erepel_acc.cpp  field_chgpen_acc.cpp  field_ewald_acc.cpp  field_nonewald_acc.cpp  induce_acc.cpp  lf_lpiston_acc.cpp  lpiston_acc.cpp  mddebug_acc.cpp  mdintg_acc.cpp  mdpq_acc.cpp  mdpt_acc.cpp  minimize_acc.cpp  nblist_acc.cpp  pmestuf_acc.cpp  rattle_acc.cpp  rotpole_acc.cpp  torque_acc.cpp
src-cu/: CMakeLists.txt  compilers_cu.cu  echarge_cu.cu  echgtrn_cu.cu  edisp_cu.cu  elj_cu.cu  emplar_cu.cu  empole_chgpen_cu.cu  empole_cu.cu  epolar_chgpen_cu.cu  field_chgpen_cu.cu  field_cu.cu  induce_donly_cu.cu  lpiston_cu.cu  mathfunc_parallel_cu.cu  mdintg_cu.cu  mdpt_cu.cu  rattle_cu.cu  spatial_cu.cu
src-libtinker/: CMakeLists.txt
src/acc/: CMakeLists.txt  alterchg.cpp  amoebaempolenonewald.cpp  amoebafieldewald.cpp  amoebainduce.cpp  atom.cpp  box.cpp  cmakesrc.txt  compilers.cpp  cudalib.cpp  dcflux.cpp  device_zero.cpp  eangle.cpp  eangtor.cpp  ebond.cpp  echarge.cpp  echgtrn.cpp  echgtrn_aplus.cpp  edisp.cpp  egeom.cpp  egvop.cpp  ehal.cpp  eimprop.cpp  eimptor.cpp  elj.cpp  empole_chgpen.cpp  empole_chgpen_aplus.cpp  empole_ewald.cpp  empole_nonewald.cpp  empoleewald.cpp  eopbend.cpp  epitors.cpp  epolar_aplus.cpp  epolar_chgpen.cpp  epolar_dot.cpp  epolar_ewald.cpp  epolar_nonewald.cpp  erepel.cpp  estrbnd.cpp  estrtor.cpp  (+40 more)
src/amoeba/: emplar.cpp  empole.cpp  epolar.cpp  field.cpp  induce.cpp  mpole.cpp
src/aplus/: empole.cpp  epolar.cpp  field.cpp  induce.cpp
src/bonded/: eangle.cpp  eangtor.cpp  ebond.cpp  egeom.cpp  eimprop.cpp  eimptor.cpp  eopbend.cpp  epitors.cpp  estrbnd.cpp  estrtor.cpp  etors.cpp  etortor.cpp  eurey.cpp
src/cu/: CMakeLists.txt  atom.cu  cmakesrc.txt  compilers.cu  cudalib.cu  cumod.cu  darray.cu  diagprecond.cu  echarge.cu  echarge_cu1.cc  echglj.cu  echgtrn.cu  echgtrn_aplus.cu  edisp.cu  egvop.cu  ehal.cu  ehal_cu1.cc  elj.cu  elj_cu1.cc  emplar.cu  empole.cu  empole_chgpen.cu  empole_chgpen_aplus.cu  empole_chgpen_self.h  empole_self.h  empolechgpen.cu  empoleself.h  epolar.cu  epolar_aplus.cu  epolar_chgpen.cu  epolar_trq.h  epolarrecip.cu  epolartrq.h  erepel.cu  evalence.cu  ffpme.cu  field.cu  field_aplus.cu  field_chgpen.cu  imagefc.h  (+24 more)
src/cudart/: async.cpp  cudalib.cpp  darray.cpp  dev_array.cpp  error.cpp  execq.cpp  fft.cpp  gpu_card.cpp  gpucard.cpp  pmestream.cpp  thrust_cache.cpp  thrustcache.cpp
src/f/: CMakeLists.txt  fc.f  suppl.f  tinker_supplement.F  tinker_supplement.h  tinkersupplement.h
src/ff/: atom.cpp  box.cpp  egvop.cpp  elec.cpp  energy.cpp  molecule.cpp  nblist.cpp  pme.cpp  potent.cpp  spatial.cpp
src/ffamoeba/: empole.cpp  induce.cpp
src/ffhippo/: cflux.cpp  echgtrn.cpp  edisp.cpp  empolechgpen.cpp  erepel.cpp  fieldchgpen.cpp
src/ffpchg/: eangle.cpp  echarge.cpp  eimprop.cpp  eimptor.cpp  eopbend.cpp  epitors.cpp  etors.cpp  etortor.cpp  eurey.cpp  evdw.cpp
src/gpu/: acc-bond.cc  acc-e.h  acc-nblist.cc  acc-vdw.cc  acc.cc  acc_angle.cc  acc_bond.cc  acc_chkpole.cc  acc_e.h  acc_field_coulomb.cc  acc_field_ewald.cc  acc_image.cc  acc_induce.cc  acc_mathfunc.cc  acc_md.cc  acc_md_thermostat.cc  acc_mdstate.cc  acc_mpole_coulomb.cc  acc_mpole_ewald.cc  acc_nblist.cc  acc_opbend.cc  acc_pitors.cc  acc_pme_cf.cc  acc_pme_cf.hh  acc_pme_conv.cc  acc_pme_conv.hh  acc_pme_grid.cc  acc_pme_grid.hh  acc_pme_grid_fphi.cc  acc_pmestuf.cc  acc_polar_coulomb.cc  acc_polar_energy.cc  acc_polar_ewald.cc  acc_rotpole.cc  acc_seq.h  acc_strbnd.cc  acc_thermostat.cc  acc_torque.cc  acc_tors.cc  acc_tortor.cc  (+75 more)
src/hippo/: cflux.cpp  echgtrn.cpp  edisp.cpp  empole.cpp  epolar.cpp  epolarchgpen.cpp  erepel.cpp  expol.cpp  field.cpp  fieldchgpen.cpp  (+1 more)
test/: CMakeLists.txt  angle.cpp  angtor.cpp  aplusgas.cpp  aplusliquid.cpp  argkey.cpp  async.cpp  bond.cpp  bounds.cpp  box.cpp  chglj.cpp  chgtrn.cpp  cmakesrc.txt  disp.cpp  emhippo.cpp  ephippo.cpp  expol.cpp  extfield.cpp  geom.cpp  improp.cpp  imptor.cpp  info.cpp  kinetic.cpp  local_frame.cpp  local_frame2.cpp  local_frame3.cpp  localframe.cpp  localframe2.cpp  localframe3.cpp  main.cpp  mathfunc.cpp  nacl.cpp  nblist.cpp  nblist.hh  opbend.cpp  osrw.cpp  partial_charge.cpp  partialcharge.cpp  pitors.cpp  polpair.cpp  (+18 more)
(+1951 files in other folders)
